[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/Lato-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Menu.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Lato-BoldItalic.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.313726, 0.352941, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.709804, 0.862745, 0.0823529, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[node name="Instruction" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_left = -8.69861
margin_top = 26.3431
margin_right = 1255.3
margin_bottom = 534.343
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUB" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="HUB"]
margin_left = -9.0
margin_top = 24.0
margin_right = 1258.0
margin_bottom = 442.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="HUB"]
margin_left = 32.8458
margin_top = 29.7279
margin_right = 1052.85
margin_bottom = 460.728
custom_fonts/font = SubResource( 2 )
text = "																			    How to Play
		
Welcome!, Thank you for stopping by!

Here are the instructions on how to play!

Use the A key to walk forwards
USe the D key to walk backwards	
Use the SPACEBAR to jump

Please note that the game played in a right to left motion. 

That's all folks!
Happy Playing!															"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Main Menu" type="Button" parent="."]
margin_left = 34.929
margin_top = 485.828
margin_right = 179.929
margin_bottom = 528.828
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Main Menu" to="." method="_on_Main_Menu_pressed"]
