[gd_scene load_steps=16 format=2]

[ext_resource path="res://Object Sprite/Objective Sprites02.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Lato-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://PlayerSprite/Right Leg Up.png" type="Texture" id=3]
[ext_resource path="res://PlayerSprite/Crutch.png" type="Texture" id=4]
[ext_resource path="res://PlayerSprite/Left Leg Up.png" type="Texture" id=5]
[ext_resource path="res://PlayerSprite/Jump.png" type="Texture" id=6]
[ext_resource path="res://PlayerSprite/Walk 1.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Menu.gd" type="Script" id=8]
[ext_resource path="res://Audio/Menu.ogg" type="AudioStream" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.313726, 0.352941, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.709804, 0.862745, 0.0823529, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.243137, 0.313726, 0.172549, 1 )
border_color = Color( 0.871094, 0.132706, 0.824944, 1 )
border_blend = true
shadow_size = 4

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.741176, 0.337255, 0.337255, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.760784, 0.345098, 0.345098, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.207843, 0.745098, 0.737255, 1 )
border_color = Color( 0.0823529, 0.345098, 0.647059, 1 )
border_blend = true

[node name="Menu" type="Node2D"]
script = ExtResource( 8 )

[node name="Background" type="ColorRect" parent="."]
margin_left = 14.8447
margin_top = -3.99999
margin_right = 1294.84
margin_bottom = 716.0
color = Color( 0.239216, 0.243137, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect -1" type="TextureRect" parent="Background"]
margin_left = 42.816
margin_top = 89.7411
margin_right = 1066.82
margin_bottom = 1113.74
rect_scale = Vector2( 0.178801, 0.162966 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect -2" type="TextureRect" parent="Background"]
margin_left = 39.8194
margin_top = 317.484
margin_right = 1063.82
margin_bottom = 1341.48
rect_scale = Vector2( 0.178801, 0.162966 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect -3" type="TextureRect" parent="Background"]
margin_left = 42.816
margin_top = 528.745
margin_right = 1066.82
margin_bottom = 1552.75
rect_scale = Vector2( 0.178801, 0.162966 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect -4" type="TextureRect" parent="Background"]
margin_left = 288.538
margin_top = 528.745
margin_right = 1312.54
margin_bottom = 1552.75
rect_scale = Vector2( 0.178801, 0.162966 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect -5" type="TextureRect" parent="Background"]
margin_left = 501.298
margin_top = 531.742
margin_right = 1525.3
margin_bottom = 1555.74
rect_scale = Vector2( 0.178801, 0.162966 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect -6" type="TextureRect" parent="Background"]
margin_left = 724.546
margin_top = 530.243
margin_right = 1748.55
margin_bottom = 1554.24
rect_scale = Vector2( 0.178801, 0.162966 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect -7" type="TextureRect" parent="Background"]
margin_left = 947.794
margin_top = 531.742
margin_right = 1971.79
margin_bottom = 1555.74
rect_scale = Vector2( 0.178801, 0.162966 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect -8" type="TextureRect" parent="Background"]
margin_left = 1109.61
margin_top = 537.735
margin_right = 2133.61
margin_bottom = 1561.73
rect_scale = Vector2( 0.178801, 0.162966 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect -9" type="TextureRect" parent="Background"]
margin_left = 1103.62
margin_top = 347.45
margin_right = 2127.62
margin_bottom = 1371.45
rect_scale = Vector2( 0.178801, 0.162966 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect -10" type="TextureRect" parent="Background"]
margin_left = 1121.6
margin_top = 116.711
margin_right = 2145.6
margin_bottom = 1140.71
rect_scale = Vector2( 0.178801, 0.162966 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect -11" type="TextureRect" parent="Background"]
margin_left = 909.0
margin_top = 117.0
margin_right = 1259.0
margin_bottom = 547.0
rect_scale = Vector2( 0.632083, 0.724918 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect -12" type="TextureRect" parent="Background"]
margin_left = 902.536
margin_top = 302.437
margin_right = 1926.54
margin_bottom = 1326.44
rect_scale = Vector2( 0.684469, 0.813113 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect -13" type="TextureRect" parent="Background"]
margin_left = 280.338
margin_top = 295.674
margin_right = 1304.34
margin_bottom = 1319.67
rect_scale = Vector2( 1.00757, 0.959642 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect -14" type="TextureRect" parent="Background"]
margin_left = 305.31
margin_top = 110.662
margin_right = 1329.31
margin_bottom = 1134.66
rect_scale = Vector2( 0.747736, 0.799189 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect -15" type="TextureRect" parent="Background"]
margin_left = 531.552
margin_top = 253.042
margin_right = 1555.55
margin_bottom = 1277.04
rect_scale = Vector2( 1.03896, 1.17383 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUB" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="HUB"]
margin_right = 1281.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="HUB"]
margin_left = 24.3221
margin_top = -3.44463
margin_right = 1287.32
margin_bottom = 36.5554
custom_fonts/font = SubResource( 2 )
text = "Menu Selections"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title2" type="Label" parent="HUB"]
visible = false
margin_left = 289.688
margin_top = 44.8882
margin_right = 429.688
margin_bottom = 68.8882
rect_scale = Vector2( 1.42158, 2.31408 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 2 )
text = "Artist  Statement"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title4" type="Label" parent="HUB"]
margin_left = 539.6
margin_top = 208.118
margin_right = 742.6
margin_bottom = 245.118
rect_scale = Vector2( 1.42158, 2.31408 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 2 )
text = "T. Wilson,2021"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
margin_left = 628.0
margin_top = 113.0
margin_right = 691.0
margin_bottom = 133.0
rect_scale = Vector2( 2.19721, 2.25988 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Statement" type="Button" parent="."]
margin_left = 268.367
margin_top = 53.2449
margin_right = 386.367
margin_bottom = 73.2449
rect_scale = Vector2( 2.19721, 2.25988 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Artist Statement"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Button" parent="."]
margin_left = 904.803
margin_top = 56.6123
margin_right = 1022.8
margin_bottom = 76.6123
rect_scale = Vector2( 2.19721, 2.25988 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Instructions "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
autoplay = true

[connection signal="pressed" from="Play" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Statement" to="." method="_on_Statement_pressed"]
[connection signal="pressed" from="Instructions" to="." method="_on_Instructions_pressed"]
